# ngs-special-functions

./: CMakeLists.txt  README.md
src/: specialcf.cpp
